# data-pipeline-portfolio

./: .gitignore  README.md  main.py  pyproject.toml
ecommerce_analytics/: dbt_project.yml
ecommerce_analytics/models/marts/: dim_products.sql  schema.yml
ecommerce_analytics/models/staging/: schema.yml  sources.yml  stg_products.sql
src/pipeline/: bigquery_loader.py  config.py  ingester.py
tests/: test_ingester.py
